prevent selection/zoom on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 * {
   margin: 0;
 }
+button {
+  /* prevents ios zoom on double tap button */
+  touch-action: manipulation;
+}
+body {
+  /* prevents selection of waveform elements */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
